--- a/modules/service/knative_service/0.1/facets.yaml
+++ b/modules/service/knative_service/0.1/facets.yaml
@@ -3,15 +3,23 @@ flavor: knative_service
 version: "0.1"
 description: Adds service module of flavor knative
 clouds:
-- aws
-- azure
-- gcp
-- kubernetes
+  - aws
+  - azure
+  - gcp
+  - kubernetes
 artifact_inputs:
   primary:
     attribute_path: "spec.release.image"
     artifact_type: "docker_image"
-
+metadata:
+  title: Metadata of service
+  type: object
+  properties:
+    namespace:
+      type: string
+      title: Namespace
+      description: Namespace in which knative service should be deployed
+      default: default
 inputs:
   kubernetes_details:
     optional: false
@@ -31,8 +39,7 @@ spec:
   properties:
     release:
       title: Release
-      description: Manage version releases to deploy updates and maintain software
-        integrity
+      description: Manage version releases to deploy updates and maintain software integrity
       type: object
       properties:
         image:
@@ -59,30 +66,22 @@ spec:
               title: Pull Policy
               description: ImagePullPolicy
               enum:
-              - IfNotPresent
-              - Always
-              - Never
-          required: ["artifactory", "name"]
+                - IfNotPresent
+                - Always
+                - Never
+          required: 
+            - artifactory
+            - name
           x-ui-skip: true
     env:
       title: Environment Variables
-      description: Map of environment variables passed to init container.
+      description: Map of environment variables passed to init container
       type: object
-      patternProperties:
-        "^[a-zA-Z][a-zA-Z0-9_-.]*$":
-          title: Evironment Variable
-          description: Environment Variable
-          type: string
       x-ui-yaml-editor: true
     knative_annotation:
       type: object
       title: Knative serving annotation
       description: Annotation for Knative service annotation
-      patternProperties:
-        "^[a-zA-Z][a-zA-Z0-9_-.]*$":
-          title: Evironment Variable
-          description: Environment Variable
-          type: string
       x-ui-yaml-editor: true
     runtime:
       type: object
@@ -98,14 +97,14 @@ spec:
             "^[0-9]+[m]?$":
               type: object
               title: Port Name
-              description: Define port allocation to facilitate communication with
-                service
+              description: Define port allocation to facilitate communication with service
               properties:
                 name:
                   type: string
                   title: Port Name
                   description: Port name for metrics
-                  x-ui-dynamic-enum: spec.runtime.ports.*
+                  x-ui-dynamic-enum:
+                    sourceField: "spec.runtime.ports.*"
                   x-ui-disable-tooltip: "No Ports Available"
                 port:
                   type: string
@@ -113,39 +112,34 @@ spec:
                   description: Port on which application is running
                   pattern: "^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
                   x-ui-unique: true
-                  x-ui-placeholder: "Enter the port number to expose for your application
-                    container"
-                  x-ui-error-message: "Value doesn't match pattern, it should be number
-                    ranging from 1-65535"
+                  x-ui-placeholder: "Enter the port number to expose for your application container"
+                  x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1-65535"
                 service_port:
                   type: string
                   title: Service Port
                   description: Port from which application service can be exposed
                   pattern: "^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
                   x-ui-unique: true
-                  x-ui-placeholder: "Enter the port number to expose for your application
-                    service"
-                  x-ui-error-message: "Value doesn't match pattern, it should be number
-                    ranging from 1-65535"
+                  x-ui-placeholder: "Enter the port number to expose for your application service"
+                  x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1-65535"
                 protocol:
                   type: string
                   title: Protocol
                   description: TCP or UDP
                   enum:
-                  - tcp
-                  - udp
+                    - tcp
+                    - udp
               required:
-              - protocol
-              - port
+                - protocol
+                - port
       required:
-      - ports
+        - ports
       x-ui-order:
-      - ports
+        - ports
     cloud_permissions:
       type: object
       title: Cloud Permissions
-      description: Assign roles, define access levels, and enforce conditions for
-        managing resource security and compliance
+      description: Assign roles, define access levels, and enforce conditions for managing resource security and compliance
       x-ui-toggle: true
       properties:
         aws:
@@ -156,8 +150,7 @@ spec:
             iam_policies:
               type: object
               title: IAM policies
-              description: Define IAM policies to manage permissions, control-access
-                and secure resources
+              description: Define IAM policies to manage permissions, control-access and secure resources
               patternProperties:
                 "^[a-zA-Z0-9_.-]*$":
                   title: policy_name
@@ -167,26 +160,24 @@ spec:
                       type: string
                       pattern: '^(arn:aws:iam::(\d{12}|aws):policy\/[A-Za-z0-9+=,.@\-_]+|\$\{[A-Za-z0-9._-]+\})$'
                       x-ui-placeholder: "IAM policy example. Eg: arn:aws:iam::123456789012:policy/policy1"
-                      x-ui-error-message: "Value doesn't match pattern, accepted value
-                        pattern Eg: arn:aws:iam::123456789012:policy/policy1"
+                      x-ui-error-message: "Value doesn't match pattern, accepted value pattern Eg: arn:aws:iam::123456789012:policy/policy1"
                       x-ui-output-type: "iam_policy_arn"
                       x-ui-typeable: true
                   required:
-                  - arn
+                    - arn
                   type: object
   required: []
   x-ui-order:
-  - runtime
-  - knative_annotation
-  - env
-  - cloud_permissions
+    - runtime
+    - knative_annotation
+    - env
+    - cloud_permissions
 outputs:
   default:
     type: "@outputs/service"
-
+    title: Service Details
 sample:
-  $schema: >-
-    https://facets-cloud.github.io/facets-schemas/schemas/service/service.schema.json
+  $schema: "https://facets-cloud.github.io/facets-schemas/schemas/service/service.schema.json"
   flavor: knative_service
   metadata:
     labels: {}
@@ -195,7 +186,7 @@ sample:
   version: "0.1"
   spec:
     env:
-      LOG_LEVEL: INFO
+      LOG_LEVEL: "INFO"
     runtime:
       ports: {}
     knative_annotation: {}
